<resources>




    <string name="app_name">HandMadeEvent</string>
    <string name="title_activity_maps">Map</string>
    <string name="auth_text_success_authentication">Successfully signed in. Welcome!</string>
    <string name="auth_text_fail_authentication">We couldn\'t sign you in. Please try again later.</string>
    <string name="auth_text_welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_fragment_menu_created_new_event" translatable="false">MenuCreatedNewEventFragment</string>
    <string name="key_mission_choose_date_start" translatable="false">start_date</string>
    <string name="key_bundle_missions_pickers" translatable="false">mission</string>
    <string name="key_mission_choose_date_expiration" translatable="false">date_expiration</string>
    <string name="key_mission_choose_time_start" translatable="false">time_start</string>
    <string name="key_mission_choose_time_expiration" translatable="false">time_expiration</string>
    <string name="key_bundle_location" translatable="false">location</string>
    <string name="tag_maps_fragment" translatable="false">MapsFragment</string>
    <string name="tag_date_picker" translatable="false">datePicker</string>
    <string name="tag_time_picker" translatable="false">timePicker</string>
    <string name="tag_separate_location" translatable="false">,</string>
    <string name="tag_separate_date" translatable="false">:</string>
    <string name="text_btn_time_picker">Choose time</string>
    <string name="text_btn_data_picker">Choose date</string>
    <string name="hint_edit_text_title">Title</string>
    <string name="hint_tv_location">Location</string>
    <string name="text_btn_created_new_event">Created</string>
    <string name="hint_tv_start_date">Start date</string>
    <string name="hint_tv_expiration_date">Expiration date</string>
    <string name="hint_tv_start_time">Start time</string>
    <string name="hint_tv_expiration_time">Expiration time</string>
    <string name="hint_tv_description">Description</string>
    <string name="key_all_event_fragment" translatable="false">AllEvent</string>
    <string name="text_btn_subscribe_item">Subscribe</string>
    <string name="name_table_event_db">Events</string>
    <string name="key_id_event_selected" translatable="false">id_event_selected</string>
    <string name="key_full_event_fragment" translatable="false">FullEvent</string>
    <string name="name_table_attendees_event_db" translatable="false">AttendeesEvent</string>


    <integer name="number_event_records_for_sample">60</integer>

    <string name="key_signed_event_fragment" translatable="false">SignedEvents</string>
    <string name="text_btn_unsubscribe_item_signed_event">Unsubscribe</string>
    <string name="tag_separate_query_db" translatable="false">/</string>
    <string name="key_mission_open_fragment" translatable="false">openFragment</string>
    <string name="key_my_event_fragment" translatable="false">MyEvent</string>
    <string name="text_btn_remove_item_my_event">Remove</string>
    <string name="key_year_map_date" translatable="false">year</string>
    <string name="key_month_map_date" translatable="false">month</string>
    <string name="key_day_map_date" translatable="false">day</string>
    <string name="key_hours_map_date" translatable="false">hours</string>
    <string name="key_minute_map_date" translatable="false">minute</string>

    <string name="weak_day_1">Monday</string>
    <string name="weak_day_2">Tuesday</string>
    <string name="weak_day_3">Wednesday</string>
    <string name="weak_day_4">Thursday</string>
    <string name="weak_day_5">Friday</string>
    <string name="weak_day_6">Saturday</string>
    <string name="weak_day_7">Sunday</string>
</resources>
