<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.denero.handmadeevent.CreatedNewEventActivity">


    <EditText
        android:id="@+id/edit_text_new_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_edit_text_title"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_new_event_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <Button
        android:id="@+id/tv_new_event_location"
        android:layout_width="256dp"
        android:layout_height="32dp"
        android:background="@drawable/button_common"
        android:clickable="true"
        android:gravity="center"
        android:inputType="none"
        android:text="Set Locale"
        app:layout_constraintBottom_toTopOf="@+id/image_new_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_event_time_start"
        app:layout_constraintVertical_bias="0.51"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btn_created_new_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_common"
        android:text="@string/text_btn_created_new_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_new_event" />


    <Button
        android:id="@+id/tv_new_event_date_start"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_common"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_calendar"
        android:gravity="center"
        android:text="@string/hint_tv_start_date"
        app:layout_constraintEnd_toStartOf="@id/tv_new_event_date_expiration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_new_event_description" />

    <Button
        android:id="@+id/tv_new_event_date_expiration"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_common"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_calendar"
        android:text="@string/hint_tv_expiration_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_new_event_date_start"
        app:layout_constraintTop_toBottomOf="@id/edit_text_new_event_description" />


    <Button
        android:id="@+id/tv_new_event_time_start"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_common"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_clock"
        android:text="@string/hint_tv_start_time"
        app:layout_constraintEnd_toStartOf="@id/tv_new_event_time_expiration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_event_date_start" />

    <Button
        android:id="@+id/tv_new_event_time_expiration"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_common"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_clock"
        android:text="@string/hint_tv_expiration_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_new_event_time_start"
        app:layout_constraintTop_toBottomOf="@id/tv_new_event_date_expiration" />


    <EditText
        android:id="@+id/edit_text_new_event_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_new_event_title"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_new_event"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:clickable="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/btn_created_new_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_event_location"
        app:srcCompat="@android:drawable/ic_menu_report_image" />


    <FrameLayout
        android:id="@+id/my_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />



</android.support.constraint.ConstraintLayout>
