<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.denero.handmadeevent.EventList.DisplayFullEventFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_full_event"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/tv_full_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_edit_text_title"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_event_location" />

        <TextView
            android:id="@+id/tv_full_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/hint_tv_location"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_full_event"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_full_event_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="69dp"
            android:layout_marginTop="68dp"
            android:clickable="true"
            android:hint="@string/hint_tv_start_date"
            app:layout_constraintEnd_toStartOf="@+id/tv_full_event_date_expiration"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_event_title" />


        <TextView
            android:id="@+id/tv_full_event_date_expiration"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:hint="@string/hint_tv_start_time"
            app:layout_constraintBottom_toTopOf="@+id/tv_full_event_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_full_event_date_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_event_title" />


        <TextView
            android:id="@+id/tv_full_event_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"

            android:hint="@string/hint_tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_event_date_expiration"
            tools:ignore="MissingConstraints"
            tools:text="addasdasdasdsadas" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>
